# OpenGL_Notebook

./: README.md
code/: CMakeLists.txt  glad.c
code/01_hello_window/: CMakeLists.txt  glad.c  main.cpp
code/02_hello_triangle/: main.cpp
code/02_hello_triangle/ex_1/: CMakeLists.txt  main.cpp
code/02_hello_triangle/ex_2/: CMakeLists.txt  main.cpp
code/02_hello_triangle/ex_3/: CMakeLists.txt  main.cpp
code/02_hello_triangle/rectangle/: CMakeLists.txt  main.cpp
code/02_hello_triangle/triangle/: CMakeLists.txt  main.cpp
code/03_shader/Ins_outs/: main.cpp
code/03_shader/ex_1/: main.cpp
code/03_shader/ex_2/: main.cpp  vertex.glsl
code/03_shader/ex_3/: answer.md  main.cpp  vertex.glsl
code/03_shader/interpolation/: main.cpp
code/03_shader/shader_class/: main.cpp
code/03_shader/uniform/: main.cpp
code/04_texture/ex_1/: fragment.glsl  main.cpp
code/04_texture/ex_2/: main.cpp
code/04_texture/ex_3/: main.cpp
code/04_texture/ex_4/: fragment.glsl  main.cpp
code/04_texture/generate_texture/: fragment.glsl  main.cpp
code/04_texture/mix_color/: fragment.glsl  main.cpp
code/04_texture/mix_texture/: main.cpp  vertex.glsl
code/05_trans/ex_1/: answer.txt  main.cpp  vertex.glsl
code/05_trans/ex_2/: main.cpp
code/05_trans/rotate/: main.cpp
code/05_trans/rotate_with_time/: main.cpp
code/06_coor/ex_3/: main.cpp
code/06_coor/go_3d/: main.cpp  vertex.glsl
code/06_coor/more_3d/: main.cpp
code/06_coor/more_cubes/: main.cpp
code/07_camera/ex_1/: fragment.glsl  main.cpp
code/07_camera/ex_2/: main.cpp
code/07_camera/look_at/: main.cpp
code/07_camera/walk_around/: main.cpp  vertex.glsl
code/include/: shader_s.h
